[package]
name = "gigadao_staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gigadao_staking"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
spl-token = "3.1.1"
spl-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
num-traits = "0.2"
num-derive = "0.2"